# Kelvin-Agents

./: .geminiignore  .gitignore  2026-04-01_ShaTin_AWT_覆盤報告.txt  2026-04-06_Sandown_Lakeside_覆盤報告.txt  2026-05-30 AU Pace Profile Shadow Test Results.md  2026-05-30 AU Triple-Meeting SIP Summary.md  2026-05-30 AU 三場合併覆盤（港式中文）.md  2026-05-31 AU Bug Fix Shadow Test v2.md  2026-05-31 AU Component Simplification Benchmark（港式中文）.md  2026-05-31 AU Comprehensive Improvement Test.md  2026-05-31 AU JT Cleanup Validation.md  2026-05-31 AU ML Feature Engineering Test.md  2026-05-31 AU Noise And Logic Audit（港式中文）.md  2026-05-31 AU Noise Fix Shadow Test.md  2026-05-31 AU Pace Profile Shadow Test Results (Venue-Aware Archive Rebuild).md  2026-05-31 AU Simplification Shadow Test.md  2026-05-31 AU Targeted Diagnostic Fix Test.md  2026-05-31 AU Targeted Post-Hoc Fix Test.md  2026-06-06 AU Cached Walkforward ML.md  2026-06-07 AU ML Residual Gate.md  2026-06-07 AU ML Weight Gate.md  2026-06-07 AU Soft Sectional Evidence Test.md  2026-06-07 AU Soft Track Simplification Test.md  2026-06-07 AU Soft Wet-Proof Cap Test.md  2026-06-09 AU Consumed Data Fix Validation Historical Final.json  2026-06-09 AU Consumed Data Fix Validation Historical HealthOnly.md  2026-06-09 AU Consumed Data Fix Validation Historical RatingOnly.json  2026-06-09 AU Consumed Data Fix Validation Historical RatingOnly.md  2026-06-09 AU Consumed Data Fix Validation Historical SpellOnly.json  2026-06-09 AU Consumed Data Fix Validation Historical SpellOnly.md  2026-06-09 AU Consumed Data Fix Validation Historical.json  2026-06-09 AU Consumed Data Fix Validation Historical.md  2026-06-09 AU Consumed Data Fix Validation JSON Final.json  2026-06-09 AU Consumed Data Fix Validation JSON HealthOnly.md  2026-06-09 AU Consumed Data Fix Validation JSON RatingOnly.json  2026-06-09 AU Consumed Data Fix Validation JSON RatingOnly.md  2026-06-09 AU Consumed Data Fix Validation JSON SpellOnly.json  2026-06-09 AU Consumed Data Fix Validation JSON SpellOnly.md  2026-06-09 AU Consumed Data Fix Validation JSON.json  2026-06-09 AU Consumed Data Fix Validation JSON.md  (+185 more)
tennis-wong-choi/: .env.example  .gitignore  AUDIT_2026-07-12.md  README.md  STAGE_1_3_PLAN.md  daily.sh  pyproject.toml  tennis_wc.pth
tennis-wong-choi/app/: dashboard.py
tennis-wong-choi/launchd/: com.antigravity.tennis-wong-choi.daily.plist.template  run_launcher.sh
tennis-wong-choi/scripts/: build_ace_calibration.py  build_games_calibration.py  install_macos_launchd.sh  (+5 more)
(+2221 files in other folders)
