[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis-wong-choi"
version = "0.1.0"
description = "API-only tennis betting pricing engine with strict data provenance."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
dashboard = ["streamlit>=1.35"]

[project.scripts]
tennis-wc = "tennis_wc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
